@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 2, 2008</p>
+      <p>Last Updated: September 3, 2008</p>
     </td>
   </tr>
 </table>
@@ -1074,6 +1074,7 @@ nuttx-0.3.14 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add support to uIP for application access to ICMP protocol stacks; Add
 	  ping request logic.
 	* NSH: Add ping command
+	* Correct IP checksum calculation in ICMP and UDP message send logic.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
